<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/bg"
    android:gravity="center">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_high_score"
        android:textStyle="bold"
        android:textSize="40sp"
        android:textColor="@color/GoldenYellow"
        android:textAlignment="center"
        android:paddingBottom="30dp"
        android:shadowColor="@color/black"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stats"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/high_score_questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_game_over_q"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correct_questions"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAlignment="center"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="30dp">
        <TextView
            android:id="@+id/high_score_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_game_over_s"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pokescore"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAlignment="center"/>

    </LinearLayout>

    <EditText
        android:id="@+id/high_score_name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/your_name"
        android:textSize="28sp"
        android:inputType="text"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:textStyle="bold"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/high_score_add"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        style="@style/MenuButton"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/submit_high_score" />

    <Button
        android:id="@+id/high_score_share"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        style="@style/MenuButton"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/share" />

    <Button
        android:id="@+id/high_score_menu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        style="@style/MenuButton"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/main_menu" />

</LinearLayout>