<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/bg"
    android:gravity="center">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_over"
        android:textStyle="bold"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:paddingBottom="60dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stats"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:id="@+id/game_over_questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_game_over_q"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correct_questions"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAlignment="center"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:id="@+id/game_over_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_game_over_s"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pokescore"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAlignment="center"/>

    </LinearLayout>

    <Button
        android:id="@+id/game_over_menu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        style="@style/MenuButton"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/main_menu" />

</LinearLayout>