<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/bg">


    <LinearLayout
        android:id="@+id/hud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="@drawable/hud_bg"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/question_number"
            android:layout_width="95dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/temp_qNum"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/buttonLifeline"
            style="@style/LifelineButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/lifeline" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/_ball"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/pokeball"
            />
        <TextView
            android:id="@+id/score"
            android:layout_width="65dp"
            android:layout_height="30dp"
            android:layout_marginStart="2dp"
            android:gravity="center"
            android:textAlignment="center"
            android:text="@string/temp_score"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>


    <ImageView
        android:id="@+id/questionImage"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/image_question_box"
        android:src="@drawable/_temp" />

    <TextView
        android:id="@+id/questionText"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginBottom="5dp"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:background="@drawable/question_bg"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button0"
        style="@style/AnswerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/button1"
        style="@style/AnswerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/button2"
        style="@style/AnswerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/button3"
        style="@style/AnswerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_weight="1" />

</LinearLayout>